# Trade

./: .env.example  .gitignore  README.md  analyze.py  pyproject.toml  scan.py  trade.py  watchlist.txt
config/: autopilot.yaml  broker.yaml  portfolio.yaml  risk-constitution.yaml
design-system/de-waag/: MASTER.md
docs/: AUTONOMOUS-ENGINE.html  REDESIGN-V2.html  SETUP-APIS.md  SYSTEM-BLUEPRINT.html  UX-V3.html
docs/curriculum/: 00-master-plan.html  01-what-a-stock-is-and-why-prices-move.html  02-how-trading-actually-happens.html  03-reading-a-company.html  04-valuation.html  05-macro.html  06-risk-and-position-sizing.html  07-strategy-landscape.html
scripts/: register-scheduler.ps1
src/dewaag/: __init__.py  agent.py  api.py  autopilot.py  broker.py  constitution.py  jobs.py  market_hours.py  pipeline.py  portfolio.py
src/dewaag/engine/: __init__.py  alerts.py  backtest.py  costs.py  insights.py  macro.py  ratios.py  risk.py  signals.py  sizing.py  taxes.py  valuation.py
src/dewaag/vault/: __init__.py  __main__.py  adjust.py  calendar.py  forward.py  fundamentals.py  ingest.py  news.py  quality.py  store.py  universe.py
tests/: test_api.py  test_auto_engine.py  test_autopilot.py  test_backtest.py  test_broker.py  test_constitution.py  test_engine.py  test_macro.py  test_market_hours.py  test_outlook.py  test_pipeline.py  test_portfolio.py  test_risk.py  test_signals.py  test_vault.py
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  api.ts  console.css  mentor.ts  theme.css
ui/src/pages/: Today.tsx  (+13 more)
(+21 files in other folders)
