[project]
name = "dewaag"
version = "0.1.0"
description = "De Waag - a personal quant workstation that weighs before it trades"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    # the vault (Phase 1)
    "pandas>=2.2",
    "pyarrow>=16.0",
    "duckdb>=1.0",
    "yfinance>=0.2.40",
    # broker (Phase 3b)
    "ib_async>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",   # FastAPI TestClient transport
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
